Fix overlap problem

--- a/assets/style.sass
+++ b/assets/style.sass
@@ -126,6 +126,7 @@ a:hover, a:focus
     width: 100%
     padding-bottom: 0
     left: 0
+    background: $sidebar-bg
 
   h1, h5
     margin: 0
